[package]
name = "zavod-mev-bot-rust-version-cli"
version = "0.1.7"
edition = "2024"

[profile.release]
strip = true
debug = false
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"   # or 3

[dependencies]
solana-sdk = "2.3.1"
solana-client = "2.3.6"

# SPL token support
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }

spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"

# Async runtime
tokio = { version = "1.47.0", features = ["full"] }

# Utilities
anyhow = "1.0"
rand = "0.9.2"
bs58 = "0.5.1"

# Command line argument parsing
clap = { version = "4.5.41", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
serde_json = "1.0.141"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["json"] }
solana-account-decoder-client-types = "2.3.6"
solana-system-interface = "1.0.0"
futures = "0.3.31"
tracing-appender = "0.2.3"
chrono = "0.4.42"

axum = "0.8.4"
